Various cosmetics / wording improvements in pages

--- a/docs/admin/01.about_self_hosting.mdx
+++ b/docs/admin/01.about_self_hosting.mdx
@@ -1,5 +1,6 @@
 ---
 title: About self-hosting
+hide_table_of_contents: true
 ---
 
 Self-hosting means owning and administrating your own server, typically at home, to host your **personal data and services** yourself instead of relying exclusively on third parties. For instance, you can self-host your blog, such that it 'lives' on a machine that you have control of, instead of having it on somebody else's computer (a.k.a. FAANG or The Cloud) in exchange for money, advertisements, or private data.
