--- a/docs/admin/02.what_is_yunohost/20.demo.mdx
+++ b/docs/admin/02.what_is_yunohost/20.demo.mdx
@@ -3,6 +3,7 @@ title: Try YunoHost
 description: A demo server
 routes:
   default: '/try'
+hide_table_of_contents: true
 ---
 
 import {YunoHostDocsCard, YunoHostDocsCardHeading} from '@site/src/components/YunoHostDocsCard';
