--- a/docs/admin/05.get_started/02.why_should_you_not_host_yourself.mdx
+++ b/docs/admin/05.get_started/02.why_should_you_not_host_yourself.mdx
@@ -1,8 +1,11 @@
 ---
-title: Why should you (not?) host yourself ?
+title: Why should you (not?) host yourself?
+hide_table_of_contents: true
+description: ""
+hide_title: true
 ---
 
-## Why should you host yourself ?
+## Why should you host yourself?
 
 - **You believe in a free, open and decentralized internet.** In a centralized internet, private companies and government can spy, analyze and influence people by dictating how they connect with each other, and by filtering content. YunoHost is developed by a community who believe in an open and decentralized internet, and we hope that you do, too!
 
@@ -12,7 +15,7 @@ title: Why should you (not?) host yourself ?
 
 - **You want to explore new possibilities and customize things.** Ever dreamed of running a Minecraft server for you friends, or a persistent IRC or XMPP client? With your very own server, you can manually install and run virtually any program you want, and customize every bit.
 
-## Why should you *not* host yourself ?
+## Why should you *not* host yourself?
 
 - **Self-hosting requires some work and patience.** Hosting yourself is a bit like growing your own garden or vegetables: it requires work and patience. While YunoHost aims to do all the hard work for you, self-hosting still requires that you take time to learn and configure a few things to setup your server properly. You will also need to perform maintenance tasks (such as upgrades) from time to time, or to ask for support if some things break.
 
