--- a/docs/admin/05.get_started/05.methods.mdx
+++ b/docs/admin/05.get_started/05.methods.mdx
@@ -1,5 +1,6 @@
 ---
 title: Choose your self-hosting mode
+hide_table_of_contents: true
 ---
 
 You can host yourself at home (on a small computer), or on a remote server. Each solution has their pros and cons:
