--- a/docs/admin/05.get_started/20.install_on/raspberry_pi.mdx
+++ b/docs/admin/05.get_started/20.install_on/raspberry_pi.mdx
@@ -77,7 +77,7 @@ dd if=/path/to/yunohost.img of=/dev/mmcblk0 status=progress ; sync
 
 ## <FAIcon icon="fa-plug"/> Power up the board
 
-- Put the SD card in your board
+- Insert the SD card in the board
 - Connect your board to your home router via Ethernet
   - For advanced users requiring WiFi instead, please follow [the official documentation](https://www.raspberrypi.com/documentation/computers/configuration.html#connect-to-a-wireless-network).
 - If you want to follow the initial boot, connect a screen and keyboard on your board.
