--- a/docs/admin/05.get_started/40.post_install/10.find_ip.mdx
+++ b/docs/admin/05.get_started/40.post_install/10.find_ip.mdx
@@ -1,5 +1,6 @@
 ---
 title: Find your server's local IP
+hide_table_of_contents: true
 ---
 
 import Tabs from '@theme/Tabs';
@@ -7,11 +8,11 @@ import TabItem from '@theme/TabItem';
 
 On an installation at home, your server should typically be accessible using the `yunohost.local` domain. If for any reason this does not work, you may need to find the *local* IP of your server.
 
-## What is a local IP ?
+## What is a local IP?
 
 The local IP is the address used to refer to your server inside the local network (typically your home) where multiple devices are connected to a router (your internet box). The local IP typically looks like `192.168.x.y` (or sometimes `10.0.x.y` or `172.16.x.y`)
 
-## How to find it ?
+## How to find it?
 
 Any of these tricks should allow you to find the local IP of your server:
 
