--- a/docs/admin/12.webadmin.mdx
+++ b/docs/admin/12.webadmin.mdx
@@ -1,5 +1,6 @@
 ---
 title: ⭐ Webadmin interface
+hide_table_of_contents: true
 ---
 
 YunoHost has an administrator web interface. The other way to administrate your YunoHost install is through the [command line](/admin/command_line).
