--- a/docs/admin/20.users/groups_and_permissions.mdx
+++ b/docs/admin/20.users/groups_and_permissions.mdx
@@ -257,7 +257,7 @@ yunohost user permission update wordpress.admin --show_tile True
 </TabItem>
 </Tabs>
 
-### Config alias group
+## Configuring group aliases
 
 Each group can use mail aliases, but their configuration is only available from the CLI so far. For example, the `admins` group is configured with aliases such as `admins@domain.tld`, `root@domain.tld` ... : mail sent to these addresses will be dispatched to all members of the `admins` group.
 
