--- a/docs/admin/50.troubleshooting/05.fail2ban.mdx
+++ b/docs/admin/50.troubleshooting/05.fail2ban.mdx
@@ -1,5 +1,6 @@
 ---
 title: IP address unban
+hide_table_of_contents: true
 ---
 
 **Fail2Ban** is an intrusion prevention software that protects computer servers against brute-force attacks. It monitors certain logs and will ban IP addresses that show brute-force-like behavior.
