--- a/docs/admin/50.troubleshooting/10.change_root_password.mdx
+++ b/docs/admin/50.troubleshooting/10.change_root_password.mdx
@@ -1,5 +1,6 @@
 ---
 title: Changing root's password
+hide_table_of_contents: true
 ---
 
 In the past, YunoHost had a special "`admin`" user in addition to `root`. This is not the case anymore, and each user admin password can be changed via the regular process.
