--- a/docs/admin/50.troubleshooting/20.ipv6.mdx
+++ b/docs/admin/50.troubleshooting/20.ipv6.mdx
@@ -1,5 +1,6 @@
 ---
 title: Setting up IPv6
+hide_table_of_contents: true
 ---
 
 IPv6 may work out of the box in many cases. But in some cases or some specific provider, you may need to tweak things manually to enable IPv6.
