--- a/docs/dev/05.git.mdx
+++ b/docs/dev/05.git.mdx
@@ -1,5 +1,6 @@
 ---
 title: 🛠️ Working with Git / Github
+hide_table_of_contents: true
 ---
 
 The YunoHost project extensively uses Git and GitHub (though we hope to move to a different platform oneday™)
