--- a/docs/dev/50.packaging/20.scripts/index.mdx
+++ b/docs/dev/50.packaging/20.scripts/index.mdx
@@ -139,20 +139,17 @@ sha256 = "5ceb12d225c20de2ba3cb4ce483348ed1a8ad5b1789d4f4f8f89dc4871524007"
 
 More infos on the `source` resource in [the resource system documentation](/dev/packaging/resources).
 
-## Common operations (TODO/FIXME)
+## Common operations
 
-### installing/upgrading app sources
+:::caution
+TODO / FIXME : this part should be completed...
+:::
 
-### adding configurations
-
-### adding a systemd service
-
-### curl / automatizing install forms
-
-### classic stuff for nodejs apps
-
-### classic stuff for php apps
-
-### classic stuff for python apps
-
-### classic stuff for ??? apps
+- installing/upgrading app sources
+- adding configurations
+- adding a systemd service
+- curl / automatizing install forms
+- classic stuff for nodejs apps
+- classic stuff for php apps
+- classic stuff for python apps
+- classic stuff for ??? apps
