--- a/docs/dev/50.packaging/60.advanced/20.config_panels.mdx
+++ b/docs/dev/50.packaging/60.advanced/20.config_panels.mdx
@@ -1,5 +1,6 @@
 ---
 title: Config Panels
+description: ''
 ---
 
 From a practical point of view, one of the main purpose of config panel is to "expose" settings from the app's configuration files to YunoHost's admins which are therefore able to manipulate them from a nice web ui. This is especially relevant for apps which do not provide any sort of admin UI and expect admins to manually edit the configuration files.
