--- a/docs/dev/50.packaging/index.mdx
+++ b/docs/dev/50.packaging/index.mdx
@@ -17,7 +17,7 @@ The simplicity of using apps is a key feature of YunoHost. As a packager, you sh
 
 - YunoHost app packaging is **not just about installing** sources and dependencies: it's also about maintenance (upgrade, backup...) and integrating the app in the YunoHost ecosystem (NGINX, SSO/LDAP, Fail2Ban, application catalog, UI/UX...)
 
-## 2. Prerequisites
+## Prerequisites
 
 Before diving in, this documentation assumes that:
 
@@ -30,7 +30,7 @@ You are also encouraged to join the [app packaging chatroom](/community/chat_roo
 
 At some point, you will also want to have a dev/test environment, either using [VirtualBox](/dev/packaging/misc/packaging_apps_virtualbox) or [LXC/ynh-dev](https://github.com/yunohost/ynh-dev) which is meant for the core but can totally be used for developping apps. You can also setup a dev/test VPS on your favourite hosting provider, or even develop on your prod if you like to live dangerously;).
 
-## 3. Notes about the history of YunoHost's app packaging
+## Notes about the history of YunoHost's app packaging
 
 Many things in YunoHost, and YunoHost app packaging format, are historical or were designed in an organic fashion. Thus some aspects may legitimately feel old.
 
