--- a/docs/dev/index.mdx
+++ b/docs/dev/index.mdx
@@ -1,6 +1,7 @@
 ---
 sidebar_position: 0
 title: Contributing to YunoHost
+hide_table_of_contents: true
 ---
 
 Let's go through the different ways to contribute to the project!
