--- a/docs/admin/02.what_is_yunohost/10.structure.mdx
+++ b/docs/admin/02.what_is_yunohost/10.structure.mdx
@@ -1,5 +1,6 @@
 ---
 title: Structure of a YunoHost server
+hide_table_of_contents: true
 ---
 
 This page provide an overview of the ecosystem of a YunoHost server. While this overview contains several approximations, the purpose here is to introduce the global picture before digging into the different aspects.
