--- a/docs/admin/05.get_started/10.providers/20.servers.mdx
+++ b/docs/admin/05.get_started/10.providers/20.servers.mdx
@@ -1,5 +1,7 @@
 ---
 title: Server providers
+hide_table_of_contents: true
+description: ""
 ---
 
 import {HighlightFFDN, HighlightNonProfit, HighlightCHATONS} from '@site/src/components/Highlight';
