--- a/docs/admin/05.get_started/20.install_on/index.mdx
+++ b/docs/admin/05.get_started/20.install_on/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Install on...
 slug: /admin/get_started/install_on
-sidebar_class_name: hidden_menu_caret
+sidebar_class_name: hidden_menu_caret bold
+hide_table_of_contents: true
 ---
 
 import DocCardList from '@theme/DocCardList';
