Make home redirect to /admin, rework the admin index page pointing to all the important stuff user may be looking for, improve Button customizability and propagate to other <Button>s

--- a/docs/admin/30.apps/index.mdx
+++ b/docs/admin/30.apps/index.mdx
@@ -16,9 +16,7 @@ Applications can be installed and managed through the webadmin interface in <Hig
 The application catalog and its categories can be browsed directly from the webadmin by clicking on the <HighlightAppInstall/> button in the apps list, or from this documentation.
 
 <div class="text--center">
-  <Button url="https://apps.yunohost.org/" color="orange">
-    <FAIcon icon='fa-cubes'/> Applications catalog
-  </Button>
+<Button url="https://apps.yunohost.org/" border="none" color="black" backgroundColor="orange"><FAIcon icon='fa-cubes'/> Browse the application catalog <FAIcon icon='fa-arrow-right'/></Button>
 </div>
 
 :::caution
