--- a/docs/admin/index.mdx
+++ b/docs/admin/index.mdx
@@ -1,12 +1,54 @@
 ---
-title: "Welcome"
+title: "Welcome!"
 sidebar_position: 0
+hide_title: true
+hide_table_of_contents: true
 ---
 
-# YunoHost admin documentation
+#
 
-Here, you'll learn [the basics of self-hosting](/admin/about_self_hosting), how to [install YunoHost](/admin/get_started/install_on) and configure it.
+<div style={{marginRight: 'auto', marginLeft: 'auto', maxWidth: '50em'}}>
 
-Then you'll be able to [add users](/admin/users), [domains](/admin/domains) and [apps](/admin/apps), and ensure [backups](/admin/backups) are done properly.
+<div class="text--center">
+<img
+    class="text--center"
+    src="/img/icons/logo-ynh-roundcorner.png"
+    alt="YunoHost logo"
+    style={{ marginTop: "-2em", maxWidth: "7rem", }}
+/>
 
-Don't hesitate to contact the [community](/community) to [ask for help](/community/help) !
+This is the documentation for YunoHost,<br/>
+an **operating system** aiming to **simplify server administration**!
+</div>
+
+If you are an **impatient power user**, you may want to try YunoHost, or jump right away to install:
+
+<div class="text--center">
+<Button url="/admin/what_is_yunohost">🤔 What's YunoHost?!</Button>
+<Button url="/admin/get_started/what_is_yunohost/demo">⚗️ Try YunoHost</Button>
+<Button url="/admin/get_started/install_on">🚀 Install</Button>
+<br/>
+<Button url="https://apps.yunohost.org/">📦 Browse the app catalog</Button>
+</div>
+
+Are you **new to self-hosting and servers in general**? We recommend to take it slow and go through the pages presenting [self-hosting](/admin/about_self_hosting), the [different modes](/admin/get_started/methods) and [other](/admin/get_started/why_should_you_not_host_yourself) [things](/category/providers) you should know prior to jumping into the action! 
+
+Are you **already using YunoHost**? You may want to get in touch with the community or reach for help:
+
+<div class="text--center">
+<Button url="https://forum.yunohost.org">📢 Forum</Button>
+<Button url="/community/chat_rooms">🗫  Chat rooms</Button>
+<Button url="/community/help">🛟 Help</Button>
+</div>
+
+Finally, you can **support the project** or get involve in [different ways](/dev):
+
+<div class="text--center">
+<Button url="https://yunohost.org/donate.html">💰 Donate</Button>
+<Button url="/dev/doc">📝 Improve the documentation</Button>
+<Button url="/dev/doc">🌐 Work on translations</Button>
+<Button url="/dev/packaging">📦 Learn app packaging</Button>
+<Button url="/dev/core">⚙️  Develop on the core</Button>
+</div>
+
+</div>
