--- a/docs/community/20.chat_rooms.mdx
+++ b/docs/community/20.chat_rooms.mdx
@@ -9,13 +9,13 @@ You could join those chat rooms using:
 
 - a [Matrix client](https://matrix.org/ecosystem/clients/)
 - a [XMPP client](https://xmpp.org/software/)
-- an [IRC Client](https://en.wikipedia.org/wiki/Comparison_of_Internet_Relay_Chat_clients) for example [KiwiIRC](https://web.libera.chat/#yunohost) (please note that the IRC room is deprecated, prefer Matrix)
+- an [IRC Client](https://en.wikipedia.org/wiki/Comparison_of_Internet_Relay_Chat_clients) for example [KiwiIRC](https://web.libera.chat/#yunohost) (please note that the IRC room is deprecated, prefer Matrix). <small>If you're using KiwiIrc, please change your username, as we got legions of `ynhuser`s.</small>
 
-Please change your username, as we got legions of `ynhuser`s.
+:::caution
+The IRC bridge is currently down. XMPP and Matrix are still bridged together, but IRC is probably way less active as most of the team coordinates via Matrix.
+:::
 
-**NB: Currently, the IRC bridge ([due to Matrix](https://libera.chat/guides/faq#are-bridges-allowed)) is disabled. So while the XMPP and Matrix are bridged, the IRC channel is not.**
-
-#### Help and support chat room
+## 🛟 Help and support chat room
 
 There is a [support](/community/help) chat room for YunoHost users mutual support and help.
 
@@ -23,31 +23,25 @@ There is a [support](/community/help) chat room for YunoHost users mutual suppor
 - XMPP: **[`support@conference.yunohost.org`](xmpp:support@conference.yunohost.org?join)**
 - IRC: **`#yunohost`** on libera.chat
 
-#### Development chat room
+## ⚙️  Development chat room
 
-YunoHost core development chat room:
+This is where contributors discuss "core" development of the YunoHost pieces such as the CLI/API, webadmin, the user portal, etc.
 
 - Matrix: **[`#yunohost-dev:matrix.org`](https://matrix.to/#/#yunohost-dev:matrix.org)**
 - XMPP: **[`dev@conference.yunohost.org`](xmpp:dev@conference.yunohost.org?join)**
 - IRC: **`#yunohost-dev`** on libera.chat
 
-Currently, the main chat room for contributions on YunoHost project.
-For help, please see **`#yunohost`** chat room above.
+## 📦 Application packaging chat room
 
-#### Applications chat room
-
-Application packaging development chat room. It allow packagers to help each other.
-It also allow to discuss packaging evolution, continuous integration tools:
+This is where app packagers coordinate around app packaging, help each other, and monitor automatic tests results:
 
 - Matrix: **[`#yunohost-apps:matrix.org`](https://matrix.to/#/#yunohost-apps:matrix.org)**
 - XMPP: **[`apps@conference.yunohost.org`](xmpp:apps@conference.yunohost.org?join)**
 - IRC: **`#yunohost-apps`** on libera.chat
 
-#### Documentation chat room
+## 📝 Documentation chat room
 
-YunoHost project documentation chat room. It allow people to discuss, synchronize and maintain
-an up-to-date documentation on the differents aspects of the project (backend, frontend, apps, project, community...).
-You may also share here your public communications about YunoHost (videos, presentations, etc.), to allow proper referencing.
+This is where people discuss and coordinate about documentation. Feel free to also ask questions about stuff that you would like to share such as tutorials, videos, presentations, ... or this can also be done on the forum.
 
 - Matrix: **[`#yunohost-doc:matrix.org`](https://matrix.to/#/#yunohost-doc:matrix.org)**
 - XMPP: **[`doc@conference.yunohost.org`](xmpp:doc@conference.yunohost.org?join)**
