--- a/docs/dev/20.translation.mdx
+++ b/docs/dev/20.translation.mdx
@@ -7,7 +7,7 @@ Translating YunoHost — not just the software, but also the documentation and a
 We primarily use **[Weblate](https://weblate.org)**, an excellent self-hostable FOSS translation platform. **No development tool / skill <small>(such as Git)</small> is required to contribute to translations**: the point of Weblate is precisely to focus on translation. New translations are automatically synced with the development the development repositories behind the scenes. The YunoHost project hosts its own Weblate instance at https://translate.yunohost.org.
 
 <div class="text--center">
-    <Button url="https://translate.yunohost.org" color="lightgreen">YunoHost translation platform (Weblate) <FAIcon icon='fa-arrow-right'/></Button>
+    <Button url="https://translate.yunohost.org" border="none" color="black" backgroundColor="lightgreen">YunoHost translation platform (Weblate) <FAIcon icon='fa-arrow-right'/></Button>
 </div>
 
 If you're interested in contributing but need us to add your language, need help, or require assistance with unlocking components, please **don’t hesitate** to contact us. You can reach out via [the forum](https://forum.yunohost.org) or [the chatrooms](/community/chat_rooms).
@@ -17,7 +17,7 @@ If you're interested in contributing but need us to add your language, need help
 YunoHost "core", webadmin, user portal and other software pieces are translated within the main project:
 
 <div class="text--center">
-    <Button url="https://translate.yunohost.org/projects/yunohost/#components" color="lightgreen">Translate the software pieces <FAIcon icon='fa-arrow-right'/></Button>
+    <Button url="https://translate.yunohost.org/projects/yunohost/#components" border="none" color="black" backgroundColor="lightgreen">Translate the software pieces <FAIcon icon='fa-arrow-right'/></Button>
 </div>
 
 Translations are automatically pushed to the corresponding Git repositories, merged by the team, and included in the next minor release of the corresponding software component.
@@ -29,7 +29,7 @@ Under the hood, the strings are typically stored in JSON files, for example [her
 The documentation is also translated on our Weblate instance in a separate, dedicated project:
 
 <div class="text--center">
-  <Button url="https://translate.yunohost.org/projects/yunohost-doc/#components" color="lightgreen">Translate the documentation <FAIcon icon='fa-arrow-right'/></Button>
+  <Button url="https://translate.yunohost.org/projects/yunohost-doc/#components"  border="none" color="black" backgroundColor="lightgreen">Translate the documentation <FAIcon icon='fa-arrow-right'/></Button>
 </div>
 
 Translations are regularly synced to [the corresponding Git repository](https://github.com/YunoHost/doc/), merged by the team, and automatically published.
@@ -45,11 +45,11 @@ You are welcome to also improve the [source pages](https://github.com/YunoHost/d
 The [project website](https://yunohost.org) and [application store](https://apps.yunohost.org/) are also available to translation.
 
 <div class="text--center">
-  <Button url="https://translate.yunohost.org/projects/yunohost/landingpage/" color="lightgreen">Translate the project website <FAIcon icon='fa-arrow-right'/></Button>
+  <Button url="https://translate.yunohost.org/projects/yunohost/landingpage/" border="none" color="black" backgroundColor="lightgreen">Translate the project website <FAIcon icon='fa-arrow-right'/></Button>
 </div>
 
 <div class="text--center">
-  <Button url="https://translate.yunohost.org/projects/yunohost/store/" color="lightgreen">Translate the app store <FAIcon icon='fa-arrow-right'/></Button>
+  <Button url="https://translate.yunohost.org/projects/yunohost/store/"  border="none" color="black" backgroundColor="lightgreen">Translate the app store <FAIcon icon='fa-arrow-right'/></Button>
 </div>
 
 Here as well, translations are regularly synced to the corresponding Git repositories [here](https://github.com/YunoHost/landingpage) and [here](https://github.com/YunoHost/appstore), merged by the team, and automatically published.
