--- a/docs/community/10.help.mdx
+++ b/docs/community/10.help.mdx
@@ -30,7 +30,7 @@ Please report bugs on our bugtrackers or contact the developers:
   {' '}
   <Button url="https://github.com/YunoHost-Apps" border="none" color="black" backgroundColor="orange"><FAIcon icon='fa-exclamation-circle'/> Report a bug in one of YunoHost's apps</Button>
   {' '}
-  <Button url="/community/chat_rooms#development-chat-room" border="none" color="black" backgroundColor="lightblue"><FAIcon icon='fa-comment'/> Contact the developers</Button>
+  <Button url="/community/chat_rooms" border="none" color="black" backgroundColor="lightblue"><FAIcon icon='fa-comment'/> Contact the developers</Button>
 </div>
 
 ## Do's
