doc/translations: add note about treshold for translations to be effectively published

--- a/docs/dev/20.translation.mdx
+++ b/docs/dev/20.translation.mdx
@@ -32,7 +32,7 @@ The documentation is also translated on our Weblate instance in a separate, dedi
   <Button url="https://translate.yunohost.org/projects/yunohost-doc/#components"  border="none" color="black" backgroundColor="lightgreen">Translate the documentation <FAIcon icon='fa-arrow-right'/></Button>
 </div>
 
-Translations are regularly synced to [the corresponding Git repository](https://github.com/YunoHost/doc/), merged by the team, and automatically published.
+Translations are regularly synced to [the corresponding Git repository](https://github.com/YunoHost/doc/), merged by the team, and automatically published. Note that only langs with at least 5% global translation are actually published. Each individual page translation must reach at least 10% translated for translations to be published for this page.
 
 Currently, only the "admin" section of the documentation is translatable, though we may open specific pages from the contribution and community sections for translation in the future. We also need to integrate a translation workflow for the navigation bar, footer, and other elements.
 
@@ -42,7 +42,7 @@ You are welcome to also improve the [source pages](https://github.com/YunoHost/d
 
 ## ✨ Project website and app store
 
-The [project website](https://yunohost.org) and [application store](https://apps.yunohost.org/) are also available to translation.
+The [project website](https://yunohost.org) ("landingpage") and [application store](https://apps.yunohost.org/) are also available to translation.
 
 <div class="text--center">
   <Button url="https://translate.yunohost.org/projects/yunohost/landingpage/" border="none" color="black" backgroundColor="lightgreen">Translate the project website <FAIcon icon='fa-arrow-right'/></Button>
@@ -52,7 +52,7 @@ The [project website](https://yunohost.org) and [application store](https://apps
   <Button url="https://translate.yunohost.org/projects/yunohost/store/"  border="none" color="black" backgroundColor="lightgreen">Translate the app store <FAIcon icon='fa-arrow-right'/></Button>
 </div>
 
-Here as well, translations are regularly synced to the corresponding Git repositories [here](https://github.com/YunoHost/landingpage) and [here](https://github.com/YunoHost/appstore), merged by the team, and automatically published.
+Here as well, translations are regularly synced to the corresponding Git repositories [here](https://github.com/YunoHost/landingpage) and [here](https://github.com/YunoHost/appstore), merged by the team, and automatically published. Note that for the project website, only langs with more than 40% translated are actually published.
 
 :::caution
 When we refer to the "app store," we are talking about the interface of the store itself, not the individual app descriptions or app-specific content (see the next section).
