Cosmetics / explicit visibile links on the page pointing to the demo

--- a/docs/admin/02.what_is_yunohost/20.demo.mdx
+++ b/docs/admin/02.what_is_yunohost/20.demo.mdx
@@ -16,23 +16,27 @@ This demo server is reset *every 30 minutes* and could be down from time to time
 
 <div style={{display: "flex"}} >
 <YunoHostDocsCard>
-  <YunoHostDocsCardHeading url="https://demo.yunohost.org/?target=_blank&classes=btn,btn-lg,btn-success" color="#30ae40"> {
-  } <FAIcon icon='fa-user'/> User interface {
-  } </YunoHostDocsCardHeading>
+<YunoHostDocsCardHeading url="https://demo.yunohost.org/" color="#30ae40">
+<span><FAIcon icon='fa-user' /> User interface</span>
+</YunoHostDocsCardHeading>
 
-  username: `demo`
+https://demo.yunohost.org
 
-  password: `demo`
+username: `demo`
+
+password: `demo`
 </YunoHostDocsCard>
 
 <YunoHostDocsCard>
-  <YunoHostDocsCardHeading url="https://demo.yunohost.org/yunohost/admin/?target=_blank&classes=btn,btn-lg,btn-primary" color="#1267da"> {
-  } <FAIcon icon='fa-cog'/> Administration interface {
-  } </YunoHostDocsCardHeading>
+<YunoHostDocsCardHeading url="https://demo.yunohost.org/yunohost/admin/" color="#1267da">
+<span><FAIcon icon='fa-cog'/> Administration interface</span>
+</YunoHostDocsCardHeading>
 
-  username: `demo`
+https://demo.yunohost.org/yunohost/admin/
 
-  password: `demo`
+username: `demo`
+
+password: `demo`
 
 </YunoHostDocsCard>
 </div>
