--- a/docs/admin/05.get_started/40.post_install/10.find_ip.mdx
+++ b/docs/admin/05.get_started/40.post_install/10.find_ip.mdx
@@ -29,13 +29,13 @@ You can use the [AngryIP](https://angryip.org/download/) software to achieve tha
 172.16.0.0  -> 172.31.255.255
 ```
 
+![](/img/angryip.png)
+
 :::tip
 - you can order by ping like on this screenshot to easily see effectively-used IP.
 - your server should typically be displayed as listening on port 80 and 443
-- in case of doubt, just type `https://192.168.x.y` in your browser to check if it's a YunoHost or not.
+- when in doubt, just type `https://192.168.x.y` in your browser to check if it's a YunoHost or not.
 :::
-
-![](/img/angryip.png)
 
 </TabItem>
 <TabItem value="router" label="With your internet router / box">
