--- a/docs/admin/12.webadmin.mdx
+++ b/docs/admin/12.webadmin.mdx
@@ -7,4 +7,4 @@ YunoHost has an administrator web interface. The other way to administrate your 
 
 The webadmin can be accessed at `https://yourdomain.tld/yunohost/admin` or using the local IP or global IP of your server (`https://1.2.3.4/yunohost/admin`)
 
-![Webadmin screenshot](/img/webadmin/webadmin.jpg)
+<Figure caption="Screenshot of YunoHost webadmin" src="/img/webadmin/webadmin.jpg" />
