--- a/docs/admin/05.get_started/40.post_install/15.port_forwarding.mdx
+++ b/docs/admin/05.get_started/40.post_install/15.port_forwarding.mdx
@@ -3,14 +3,13 @@ title: Configure port-forwarding
 description: "Make your server accessible from outside your home"
 ---
 
-If you are self-hosting at home and without a VPN, you need to forward ports on your home router ("Internet box"). The sketch below tries to briefly summarize the role and necessity of port forwarding when setting up a server at home.
+If you are self-hosting at home and without a VPN, you will probably want to forward ports on your home router ("Internet box") if you want your server to be reachable from outside your local network. The sketch below tries to briefly summarize the role and necessity of port forwarding when setting up a server at home.
 
 <Figure caption="Illustration of the importance of port-forwarding" src="/img/portForwarding_en.png" />
 
 ### 0. Diagnose ports opened
 
-The new diagnosis tool introduced in 3.8 can be used to diagnose that ports are
-correctly exposed.
+The diagnosis tool can be used to verify that all necessary ports are exposed to the Internet.
 
 ### 1. Access your box/router administration interface
 
@@ -26,13 +25,12 @@ The local IP address needs to be static, so that the port forwards that you are 
 
 ### 3. Forwarding ports
 
-In your router admin interface, look for something like 'router configuration' or 'port forwarding'. The naming differs among the various kinds of boxes.
+In your router admin interface, look for something like "router configuration" or "port forwarding". The naming differs among the various kinds of router models.
 
 Opening the ports listed below is necessary for the various services available in YunoHost to work. For each of them, the 'TCP' forwarding is needed. Some interfaces refer to 'external' and 'internal' ports: these are the same in our case.
 
 - Web: `80` <small>(HTTP)</small>, `443` <small>(HTTPS)</small>
 - [SSH](/admin/command_line): `22`
-- [XMPP](https://wikipedia.org/wiki/XMPP): `5222` <small>(clients)</small>, `5269` <small>(servers)</small>
 - [Email](/admin/email): `25`, `587` <small>(SMTP)</small>, `993` <small>(IMAP)</small>
 
 If you use both a modem and a router, then you need to do the following:
@@ -41,5 +39,5 @@ If you use both a modem and a router, then you need to do the following:
 2. then on the router (the box between the modem and your devices) create rules to forward the above ports to the static IP address for your server.
 
 :::warning
-<FAIcon icon="fa-exclamation-triangle"/> Some internet service providers block port 25 (mail SMTP) by default to fight spam. Some other ISP don't allow to use port 80/443 (web) freely, though it's less likely. Depending on the ISP, it might be possible to open them in the admin interface... Check [this page](/admin/get_started/providers/isp/) for more info.
+<FAIcon icon="fa-exclamation-triangle"/> Many internet service providers (ISP) block outgoing traffic on port 25 by default, to fight spam. Port 25 is however necessary if you want your server to be able to send email. In other extreme cases, some ISP may not even allow to use port 80/443 (web) freely... Depending on the ISP, it might be possible to open them in the admin interface... Check [this page](/admin/get_started/providers/isp/) for more info.
 :::
